[gd_scene load_steps=5 format=3 uid="uid://cfsdlqedrek2g"]

[ext_resource type="Script" path="res://Scenes/Card/Card.gd" id="1_i3hsd"]
[ext_resource type="Texture2D" uid="uid://cl0b1c1fvpiq0" path="res://Assets/Sprites/suits/diamond.svg" id="1_rqedq"]
[ext_resource type="Theme" uid="uid://8vmikw1ceyon" path="res://Themes/Card.tres" id="2_ipxjo"]
[ext_resource type="Texture2D" uid="uid://b7nallu82p2up" path="res://Assets/Sprites/cards/back.png" id="4_ww0hd"]

[node name="Card" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 4
script = ExtResource("1_i3hsd")
cardNumValue = "12"
cardSuitValue = "clubs"

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(-62, -77)

[node name="FrontBorder" type="ColorRect" parent="Node2D"]
offset_right = 130.0
offset_bottom = 160.0
color = Color(0, 0, 0, 1)

[node name="FrontFill" type="ColorRect" parent="Node2D"]
offset_left = 1.0
offset_top = 1.0
offset_right = 129.2
offset_bottom = 159.0
color = Color(0.556863, 0.639216, 0.65098, 1)

[node name="CardContentMargin" type="MarginContainer" parent="Node2D/FrontFill"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="GridContainer" type="GridContainer" parent="Node2D/FrontFill/CardContentMargin"]
layout_mode = 2
size_flags_stretch_ratio = 2.16
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 16
columns = 2

[node name="CardNumberDisplayTop" type="RichTextLabel" parent="Node2D/FrontFill/CardContentMargin/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_ipxjo")
theme_override_colors/default_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "[center]9"
fit_content = true

[node name="MarginContainer" type="MarginContainer" parent="Node2D/FrontFill/CardContentMargin/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CardSuitDisplayTop" type="TextureRect" parent="Node2D/FrontFill/CardContentMargin/GridContainer/MarginContainer"]
layout_mode = 2
texture = ExtResource("1_rqedq")
expand_mode = 1
stretch_mode = 4

[node name="MarginContainer2" type="MarginContainer" parent="Node2D/FrontFill/CardContentMargin/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CardSuitDisplayBottom" type="TextureRect" parent="Node2D/FrontFill/CardContentMargin/GridContainer/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("1_rqedq")
expand_mode = 5
stretch_mode = 5

[node name="CardNumberDisplayBottom" type="RichTextLabel" parent="Node2D/FrontFill/CardContentMargin/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 10
theme = ExtResource("2_ipxjo")
theme_override_colors/default_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "[center]9"
fit_content = true

[node name="CardBack" type="TextureRect" parent="Node2D/FrontFill/CardContentMargin"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("4_ww0hd")
expand_mode = 1
